test/src/e2e_vm_tests/test_programs/should_fail/attributes_invalid_args_multiplicity/src/fallback_attr.sw
library;

#[fallback]
pub fn ok_1() { } // Actually semantically also not ok, but the compilation will not reach that phase.

#[fallback()]
pub fn ok_2() { } // Actually semantically also not ok, but the compilation will not reach that phase.

#[fallback(invalid)]
pub fn not_ok_1() { }